dlang and csharp (#12)
* dlang stub

* add dlang

* add csharp

* analysis

---------

Co-authored-by: Hendrik Niemeyer <hendrik.niemeyer@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,7 @@ cpp/stl
 cpp/nostl
 cpp/ranges
 c/dhondt
+dlang/dlangdhondt
+dlang/dlangdhondt.o
+csharp/DhondtCalculator/bin
+csharp/DhondtCalculator/obj
