--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,29 @@
-cpp/stl
-cpp/nostl
-cpp/ranges
-c/dhondt
-dlang/dlangdhondt
-dlang/dlangdhondt.o
-csharp/DhondtCalculator/bin
-csharp/DhondtCalculator/obj
+# 1) Ignore all .dll and .json files
+**/*.dll
+**/*.json
+
+# 2) Ignore all files...
+**/*
+
+#    …but not directories (so Git can still traverse)
+!*/
+
+#    …and except files that have at least one dot in their name
+!**/*.*
+
+# 3) Finally, make sure .dll and .json stay ignored
+**/*.dll
+**/*.json
+**/*.pdb
+**/*.cache
+**/*.o
+**/*.jar
+**/*.js
+**/*.dump
+
+**/bin
+**/obj
+**/obj/**/*.*
+**/bin/**/*.*
+**/obj/*.*
+**/bin/*.*
